some personalizing changes

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"private": true,
-	"name": "nuro.dev",
+	"name": "rohithkattamuri.me",
 	"version": "2.1.1",
-	"description": "Personal Website for nuro.dev",
-	"repository": "https://github.com/nurodev/nuro.dev.git",
-	"author": "nurodev <me@nuro.dev>",
+	"description": "Personal Website for rohithkattamuri.me",
+	"repository": "https://github.com/rkat7/templateWebsiteApp.git",
+	"author": "rkat7 <me@rkat7>",
 	"license": "MIT",
 	"prettier": {
 		"arrowParens": "always",
