--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
 	"redirects": [
 		{ "source": "/cv", "destination": "https://read.cv/nuro" },
 		{ "source": "/github", "destination": "https://github.com/nurodev" },
-		{ "source": "/linkedin", "destination": "https://www.linkedin.com/in/nurodev" },
+		{ "source": "/linkedin", "destination": "https://www.linkedin.com/in/rohithkattamuri-profile" },
 		{ "source": "/portfolio", "destination": "/projects" },
 		{ "source": "/resume", "destination": "https://read.cv/nuro" },
 		{ "source": "/twitter", "destination": "https://twitter.com/nurodev" },
